Feat: Redis Cache added
