# docs/swagger.yaml
@@ -65,6 +65,10 @@ definitions:
         type: string
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       token:
         type: string
       username:
@@ -144,6 +148,17 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -154,6 +169,10 @@ definitions:
         type: string
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       username:
         description: |-
           FirstName string    `json:"first_name"`
@@ -301,6 +320,9 @@ paths:
         "400":
           description: Bad Request
           schema: {}
+        "403":
+          description: Forbidden
+          schema: {}
         "404":
           description: Not Found
           schema: {}
@@ -371,6 +393,9 @@ paths:
           schema: {}
         "401":
           description: Unauthorized
+          schema: {}
+        "403":
+          description: Forbidden
           schema: {}
         "404":
           description: Not Found
